--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -2,12 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <item
         android:id="@+id/info"
         android:icon="@android:drawable/ic_dialog_info"
-
-        android:title="Item"
-
-        app:showAsAction="ifRoom" />
-    <item android:title="Item" />
+        android:title="Info"
+        app:showAsAction="always" />
 </menu>
