--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorSecondary">#9cd7c5</color>
     <color name="colorSecondaryDark">#6ca595</color>
     <color name="colorSecondaryLight">#cefff8</color>
+    <color name="black">#000000</color>
 </resources>
